# HtmlML

./: .gitattributes  .gitignore  .gitmodules  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  HtmlML.sln  README.md  concurrentdesign.md  coverage-backend-abstractions.runsettings  coverage-core.runsettings  coverage-css.runsettings  coverage-graphics.runsettings  coverage.runsettings  nuget.config  use-cases.md
.github/workflows/: CI.yml  native-runtime-packages.yml
baselines/r0/: README.md  baseline-manifest.json  coverage-floor.json
benchmarks/: README.md
benchmarks/JavaScript.Avalonia.Benchmarks/: BenchmarkApp.cs  BenchmarkPaths.cs  CssCustomPropertyPerformanceProbe.cs  CssStyleStoragePerformanceProbe.cs  JavaScript.Avalonia.Benchmarks.csproj  Program.cs  V8AttributeInteropProbe.cs  V8CanvasStringBoundaryProbe.cs  V8DatasetInteropProbe.cs  V8DomIdentityProbe.cs  V8DomInteropProbe.cs  V8IframePointerProbe.cs  V8InteractionContractsProbe.cs  V8LifecycleProbe.cs  V8MutationObserverProbe.cs  V8NativePackageProbe.cs  V8ReactFocusProbe.cs  V8ReactSchedulerProbe.cs  V8SharedCompilationCacheProbe.cs  V8TextNodeInteropProbe.cs  V8TokenListInteropProbe.cs
docs/: backends.md
docs/architecture/: README.md  native-v8-scene-engine.md
docs/nuget/: README.md
experiments/HtmlML.NativeEngine.Probe/: CMakeLists.txt  README.md
experiments/HtmlML.NativeEngine.Probe/native/: htmlml_native_dom.cpp  htmlml_native_dom.h  htmlml_native_engine.cpp  htmlml_native_engine.exports  htmlml_native_engine.h  htmlml_native_engine.map  htmlml_v8_runtime.cpp  htmlml_v8_runtime.h
experiments/HtmlML.NativeEngine.Probe/scripts/: dynamic-style-contract.js  innerhtml-contract.js
experiments/HtmlML.NativeEngine.Probe/tests/: native_v8_runtime_tests.cpp
packaging/HtmlML.NativeEngine.Runtime/: HtmlML.NativeEngine.Runtime.csproj  HtmlML.NativeEngine.Runtime.targets  README.md
packaging/JavaScript.Avalonia.ClearScript.Native/: JavaScript.Avalonia.ClearScript.Native.csproj  JavaScript.Avalonia.ClearScript.Native.targets  README.md
samples/AvaloniaBackendSample/: App.axaml  App.axaml.cs  AvaloniaBackendSample.csproj  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  README.md
samples/JavaScriptHostSample/: App.axaml  App.axaml.cs  JavaScriptHostSample.csproj  MainWindow.axaml  MainWindow.axaml.cs  Program.cs
samples/JavaScriptPlayground/: App.axaml  App.axaml.cs  JavaScriptPlayground.csproj  MainWindow.axaml  MainWindow.axaml.cs  PlaygroundFileBridge.cs  PlaygroundShellBridge.cs  Program.cs  README.md
samples/components/: README.md  build.mjs  catalog.json  check.mjs  package-lock.json  package.json  tsconfig.json
samples/website/: Program.cs  index.axaml  index.axaml.cs  main.axaml  main.axaml.cs  website.csproj
scripts/: build-clearscript-v8-native.ps1  build-clearscript-v8-native.sh  build-native-engine-runtime.ps1  build-native-engine-runtime.sh  pack-clearscript-v8-native.sh  pack-managed-packages.sh  run-r0-baseline.sh  run-r4-package-smoke.sh  run-r4-renderer-matrix.sh  run-r5-catalog-runtime-smoke.sh  run-r5-sample-smoke.sh  run-r5-sdk-smoke.sh  summarize-r0-artifacts.py  test-clearscript-v8-native-package.sh  test-clearscript-v8-native-release-wpt.sh  verify-r4-packages.py  verify-release-packages.py  write-r4-renderer-matrix.py
src/HtmlML/: HtmlML.csproj  README.md  body.cs  div.cs  h1.cs  html.cs  p.cs
src/HtmlML.Backend.Abstractions/: BackendManifest.cs  HtmlML.Backend.Abstractions.csproj  README.md
src/HtmlML.Backend.Avalonia/: AvaloniaBackendHost.cs  HtmlML.Backend.Avalonia.csproj  README.md  htmlml-backend.json
src/HtmlML.Core/: BackendContracts.cs  ExternalEventContracts.cs  HostContracts.cs  HotPathContracts.cs  HtmlML.Core.csproj  InputContracts.cs  Primitives.cs
src/HtmlML.Css/: AssemblyInfo.cs  CssArrangementEngine.cs  CssCascade.cs  CssColorParser.cs  CssComputedValueNormalizer.cs  CssComputedValues.cs  CssCustomPropertySyntax.cs  CssLayoutModel.cs  CssLengthParser.cs  CssMeasurementEngine.cs  CssMediaQueryEvaluator.cs  CssMutationInvalidationPlanner.cs  CssPropertyCatalog.cs  CssPropertyStorage.cs  CssSelectorDependencies.cs  CssSelectorMatcher.cs  CssSelectorSyntax.cs  CssStylesheetCompiler.cs  CssSubpixelFlexAllocator.cs  CssSupportsProcessor.cs  CssTableModelFixup.cs  CssTableWidthDistribution.cs  CssVariableResolver.cs  HtmlML.Css.csproj
src/HtmlML.Dom/: AssemblyInfo.cs  DomDataset.cs  DomEvents.cs  DomMutationRecords.cs  DomNodes.cs  DomTextNodeSemantics.cs  DomTokenListSemantics.cs  DomTreeUtilities.cs  HtmlML.Dom.csproj
src/HtmlML.Graphics/: AssemblyInfo.cs  CanvasPacketReplay.cs  CanvasPackets.cs  CanvasStateModels.cs  GraphicsModels.cs  HtmlML.Graphics.csproj  ReferenceRenderer.cs
src/HtmlML.JavaScript/: ExternalJavaScriptCallbacks.cs  ExternalVirtualBrowsingContext.cs  HotPathContracts.cs  HtmlML.JavaScript.csproj  JavaScriptTaskScheduler.cs  RuntimeContracts.cs
src/HtmlML.Sdk/: CompatibilityChecker.cs  ComponentManifest.cs  ComponentRuntime.cs  HostBridge.cs  HtmlML.Sdk.csproj  README.md
src/HtmlML.Sdk.Avalonia/: HtmlML.Sdk.Avalonia.csproj  HtmlMlComponentHost.cs  README.md
src/JavaScript.Avalonia/: AssemblyInfo.cs  AvaloniaBrowserHost.cs  AvaloniaCanvasBatchReplay.cs  AvaloniaCanvasDisplayListRenderer.cs  AvaloniaCssLayoutProjection.cs  AvaloniaDomDocument.cs  AvaloniaHostServices.cs  AvaloniaSvgSceneSurface.cs  CanvasContextBridge.cs  CanvasDrawingSurface.cs  CanvasOpenGlDrawingSurface.cs  CanvasWebGlFrame.cs  CanvasWebGlOpenGlRenderer.cs  CanvasWebGlRenderingContext.cs  CssFontFaceRegistry.cs  CssFontResolver.cs  CssLayoutPanel.cs  CssStyleEngine.cs  CssValueParser.cs  DomEvents.cs  GlobalUsings.cs  HtmlMlDiagnostics.cs  JavaScript.Avalonia.csproj  JintAvaloniaHost.cs  README.md  SvgControls.cs  TypeScriptRuntime.cs
src/JavaScript.Avalonia.ClearScript/: ClearScriptV8Runtime.cs  ClearScriptV8RuntimeOptions.cs  ClearScriptV8SharedCache.cs  JavaScript.Avalonia.ClearScript.csproj  README.md  V8ExternalCallbackAdapter.cs
templates/HtmlML.Templates/: HtmlML.Templates.csproj  README.md
tooling/htmlml/: vite.mjs  (+6 more)
(+439 files in other folders)
